--- a/src/main/resources/templates/homePage/fragments/historyContent.html
+++ b/src/main/resources/templates/homePage/fragments/historyContent.html
@@ -54,7 +54,7 @@
       <div class="row mb-3">
         <div class="col-md-6"></div>
         <div class="col-md-6 d-flex justify-content-end align-items-center">
-          <form class="d-flex" id="filterForm" method="get" th:action="@{/history}" onsubmit="return false;">
+          <form class="d-flex" id="filterForm" method="get" th:action="@{/home/history}" onsubmit="return false;">
             <input type="text" name="courseName" th:value="${courseName}" class="form-control me-2" placeholder="Search for courses..." id="courseNameInput">
             <input type="date" name="startDate" th:value="${startDate}" class="form-control me-2" id="startDateInput">
             <input type="date" name="endDate" th:value="${endDate}" class="form-control me-2" id="endDateInput">
@@ -109,13 +109,13 @@
         <nav th:if="${totalPages > 1}">
           <ul class="pagination mb-0">
             <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
-              <a class="page-link" th:href="@{/history(page=${currentPage - 1}, size=${pageSize}, courseName=${courseName}, status=${status}, startDate=${startDate}, endDate=${endDate})}"><i class="fa fa-angle-left"></i></a>
+              <a class="page-link" th:href="@{/home/history(page=${currentPage - 1}, size=${pageSize}, courseName=${courseName}, status=${status}, startDate=${startDate}, endDate=${endDate})}"><i class="fa fa-angle-left"></i></a>
             </li>
             <li class="page-item" th:each="i : ${#numbers.sequence(0, totalPages - 1)}" th:classappend="${currentPage == i} ? 'active'">
-              <a class="page-link" th:href="@{/history(page=${i}, size=${pageSize}, courseName=${courseName}, status=${status}, startDate=${startDate}, endDate=${endDate})}" th:text="${i + 1}"></a>
+              <a class="page-link" th:href="@{/home/history(page=${i}, size=${pageSize}, courseName=${courseName}, status=${status}, startDate=${startDate}, endDate=${endDate})}" th:text="${i + 1}"></a>
             </li>
             <li class="page-item" th:classappend="${currentPage == totalPages - 1} ? 'disabled'">
-              <a class="page-link" th:href="@{/history(page=${currentPage + 1}, size=${pageSize}, courseName=${courseName}, status=${status}, startDate=${startDate}, endDate=${endDate})}"><i class="fa fa-angle-right"></i></a>
+              <a class="page-link" th:href="@{/home/history(page=${currentPage + 1}, size=${pageSize}, courseName=${courseName}, status=${status}, startDate=${startDate}, endDate=${endDate})}"><i class="fa fa-angle-right"></i></a>
             </li>
           </ul>
         </nav>
@@ -190,7 +190,7 @@
       $(document).ready(function () {
         $(document).on('click', '.transaction-detail-btn', function () {
           var id = $(this).data('id');
-          $.get('/history/detail/' + id, function(data) {
+          $.get('/home/history/detail/' + id, function(data) {
             if (data) {
               $('#modal-refCode').text('#' + (data.refCode || ''));
               $('#modal-createdAt').text(data.createdAt ? new Date(data.createdAt).toLocaleString('vi-VN') : '');
@@ -213,7 +213,7 @@
           const startDate = $('#startDateInput').val();
           const endDate = $('#endDateInput').val();
           $.ajax({
-            url: '/history',
+            url: '/home/history',
             type: 'GET',
             data: {
               courseName: courseName,
